--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <title>done-mutation-observer</title>
-<script src="node_modules/steal/steal.js" main="done-mutation-observer/test"></script>
+<script src="node_modules/steal/steal.js"
+	data-main="done-mutation-observer/done-mutation-observer-test"></script>
 <div id="qunit-fixture"></div>
